--- a/nginx.conf
+++ b/nginx.conf
@@ -1,69 +1,45 @@
-# This is the user Nginx will run as. On Windows, it's typically 'nobody'.
-user nobody;
+server {
+    listen 80;
+    listen [::]:80;
+    server_name jacobz.xyz www.jacobz.xyz;
+    
+    # Corrected root path for Windows
+    root "C:/Users/Jacob/AWBB/"; 
+    
+    index index.php index.html index.htm;
 
-# Defines the number of worker processes. 'auto' is usually a good choice.
-worker_processes auto;
+    # This is the most crucial part for your application
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 
-# Sets the path for the error log file.
-error_log logs/error.log;
-
-# Sets the path for the PID file.
-pid logs/nginx.pid;
-
-events {
-    # Sets the maximum number of simultaneous connections for each worker process.
-    worker_connections 1024;
-}
-
-http {
-    # Includes common MIME types. This file is usually in the same 'conf' directory.
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    # Sets the path for the access log file.
-    access_log logs/access.log;
-
-    # Specifies the server block for your website.
-    server {
-        # Nginx will listen on port 80 for incoming HTTP requests.
-        listen 80;
+    # Pass PHP scripts to PHP-FPM
+    location ~ \.php$ {
+        # Check if the file exists before passing to php-fpm
+        try_files $uri =404;
         
-        # This is the domain name Nginx will respond to.
-        server_name localhost;
-
-        # This is the root directory for your website files.
-        # Nginx for Windows requires forward slashes and quotes for paths with spaces.
-        root "C:/Users/Jacob/jacobz.xyz/AWBB";
-
-        # This is a crucial line. It tells Nginx to look for these files in this order
-        # when a directory is requested (e.g., http://localhost/).
-        index index.php index.html index.htm;
+        # This is where you configure the connection to PHP-FPM
+        # Use a TCP port for Windows
+        fastcgi_pass 127.0.0.1:9000;
         
-        # This block defines how Nginx should handle requests for the root directory.
-        location / {
-            # try_files first attempts to serve the requested file ($uri),
-            # then the directory ($uri/), and finally returns the index.php file
-            # with the original query string. This handles both static files and
-            # routes all non-existent requests to your main PHP script.
-            try_files $uri $uri/ /index.php?$query_string;
-        }
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
 
-        # This block handles all requests for files ending with .php
-        location ~ \.php$ {
-            # The root directive must be specified again for the PHP location block.
+    # Hide dotfiles like .htaccess and .git
+    location ~ /\. {
+        deny all;
+    }
 
-            # This line forwards the PHP file to the PHP-CGI process.
-            # It's configured to listen on a local address and port 9000.
-            fastcgi_pass   127.0.0.1:9000;
-            
-            # fastcgi_index is the default index file for PHP.
-            fastcgi_index  index.php;
-            
-            # fastcgi_param tells PHP-CGI where to find the script to execute.
-            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-            
-            # This line includes the standard fastcgi parameters.
-            include        fastcgi_params;
-        }
+    # Set appropriate headers for static files
+    location ~* \.(jpg|jpeg|png|gif|bmp|webp|svg|mp4|webm|ogg|mov|avi|mp3|wav|pdf|txt|log|md|php|html|css|js|json|xml|csv|py|bat|cmd|sh|c|cpp|h|hpp|java|cs|go|rb|pl|swift|kt|rs|ts|jsx|tsx|vue|scss|less|jsonc|yaml|yml|toml|ini|cfg)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Redirect non-www to www (optional)
+    if ($host = 'jacobz.xyz') {
+        return 301 https://www.jacobz.xyz$request_uri;
     }
 }
